# akshare-stockdata-plugin

./: .difyignore  .gitignore  .pre-commit-config.yaml  AKShare 股票数据插件 CHATFLOW-DEMO.yml  AKShare 股票数据插件详细功能文档.md  AKShare-Stockdata-plugin.difypkg  CHANGELOG.md  CONTRIBUTING.md  DOCKER_CONFIG_GUIDE.md  IMPLEMENTATION_SUMMARY.md  LEGAL.md  LEGAL_CN.md  LEGAL_PT_BR.md  LEGAL_ZH_TW.md  LICENSE  LOCAL_DEVELOPMENT.md  PRIVACY.md  PRIVACY_CN.md  PRIVACY_PT_BR.md  PRIVACY_ZH_TW.md  README.md  README_CN.md  README_EN.md  README_PT_BR.md  README_ZH_TW.md  RELEASE_NOTES_v0.6.0.md  UPGRADE_GUIDE.md  main.py  manifest.yaml  pyproject.toml  requirements.txt  test_params.json  个股信息总貌TOOL.md  个股行情分析-ChatFlow.yml  实时行情数据TOOL.md  沪深港通持股TOOL.md  股票技术分析TOOL.md  资金流向分析TOOL.md
_assets/: 历史行情数据TOOL.md  股票市场总貌TOOL.md  股票财务数据分析TOOL.md
provider/: akshare_registry.py  akshare_stockdata.py  akshare_stockdata.yaml  akshare_worker.py
releases/: AKShare-Stockdata-plugin-v0.5.0.difypkg  README.md
tools/: common_utils.py  stock_comprehensive_technical_indicators.py  stock_comprehensive_technical_indicators.yaml  stock_financial_analysis.py  stock_financial_analysis.yaml  stock_fund_flow_analysis.py  stock_fund_flow_analysis.yaml  stock_hist_quotations.py  stock_hist_quotations.yaml  stock_hk_data.py  stock_hk_data.yaml  stock_hsgt_holdings.py  stock_hsgt_holdings.yaml  stock_index_data.py  stock_index_data.yaml  stock_individual_info_summary.py  stock_individual_info_summary.yaml  stock_market_summary.py  stock_market_summary.yaml  stock_spot_quotations.py  stock_spot_quotations.yaml  stock_technical_analysis.py  stock_technical_analysis.yaml  stock_us_data.py  stock_us_data.yaml  stockdata_em.py  stockdata_em.yaml  technical_indicators.py
应用示例/: README.md  (+4 more)
(+17 files in other folders)
